--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "i": "^0.3.7",
     "jquery": "^3.6.1",
     "npm": "^8.19.2",
-    "react": "^16.14.0",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.0.0",
     "react-collapsed": "^4.0.0",
@@ -29,7 +29,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
-    "react-tabs": "^5.1.0",
+    "react-tabs": "^6.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -40,8 +40,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
